added log4j2, replaced all System.out and System.err with IcyLogger, added Jansi to enable ANSI highlight in Windows terminal, cleaned some classes